2007-05-21  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.9

	* gmime/gmime-stream-cat.c (stream_substream): Fixed a memory leak
	by always returning a GMimeStreamCat, even if the source list
	contains only a single stream (probably better that it work this
	way anyway for consistency), thanks again to Charles Kerr for
	finding and presenting a fix for this. Fixes bug #440054.

	* gmime/gmime-stream-file.c (stream_seek): Oops, fseek() should
	have been using SEEK_SET, not SEEK_END. Thanks to Charles Kerr for
	the report and the fix. Fixes bug #439841.

2007-04-25  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.8

	* tests/test-pgp.c: Test exporting of keys.

	* gmime/gmime-utils.c (rfc2047_decode_word): Fixed compile
	warnings.

	* gmime/gmime-stream-file.c (stream_reset): Removed an unused
	variable.

	* gmime/gmime-charset.c (g_mime_charset_can_encode): 
	s/if (mask->level = 1)/if (mask->level == 1)/

2007-04-23  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.7

2007-04-14  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/*.c (g_mime_*_get_type): Set n_preallocs to 0.

2007-04-12  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/*.c: no need for a second NULL argument to g_object_new()

	* util/cache.c (cache_new): Change max_size and node_size to be of
	type size_t.

	* gmime/gmime-multipart-encrypted.c
	(g_mime_multipart_encrypted_new): g_object_new() doesn't need a
	second NULL argument.

	* gmime/gmime-utils.c (decode_8bit): Close the iconv descriptor
	and since we are using is_ascii() now, we don't need to use
	unsigned char *'s.

2007-04-12  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (decode_8bit): Use is_ascii().
	(g_mime_utils_header_decode_text): Same.
	(g_mime_utils_header_decode_phrase): Here too.

	* gmime/gen-table.c: Added a is_ascii() macro for use instead of