@@ -53,57 +53,3 @@ g_mime_strcase_hash (gconstpointer key)
 	
 	return h;
 }
-
-#ifndef HAVE_STRNCASECMP
-/**
- * strncasecmp:
- * @s1: string 1
- * @s2: string 2
- * @n: len to compare
- *
- * Compares the first @n characters of the 2 strings, @s1 and @s2,
- * ignoring the case of the characters.
- *
- * Returns an integer less than, equal to, or greater than zero if @s1
- * is found, respectively, to be less than, to match, or to be greater
- * than @s2.
- **/
-int
-strncasecmp (const char *s1, const char *s2, size_t n)
-{
-	register const char *p1 = s1, *p2 = s2;
-	const char *q1 = s1 + n;
-	
-	for ( ; *p1 && p1 < q1; p1++, p2++)
-		if (g_tolower (*p1) != g_tolower (*p2))
-			return g_tolower (*p1) - g_tolower (*p2);
-	
-	return 0;
-}
-#endif
-
-#ifndef HAVE_STRCASECMP
-/**
- * strcasecmp:
- * @s1: string 1
- * @s2: string 2
- *
- * Compares the 2 strings, @s1 and @s2, ignoring the case of the
- * characters.
- *
- * Returns an integer less than, equal to, or greater than zero if @s1
- * is found, respectively, to be less than, to match, or to be greater
- * than @s2.
- **/
-int
-strcasecmp (const char *s1, const char *s2)
-{
-	register const char *p1 = s1, *p2 = s2;
-	
-	for ( ; *p1; p1++, p2++)
-		if (g_tolower (*p1) != g_tolower (*p2))
-			break;
-	
-	return g_tolower (*p1) - g_tolower (*p2);
-}
-#endif
