@@ -1,3 +1,7 @@
+2007-07-03  Jeffrey Stedfast  <fejj@gnome.org>
+
+	* gmime/gmime-common.c: Removed str[n]casecmp
+
 2007-05-21  Jeffrey Stedfast  <fejj@gnome.org>
 
 	* README: Bumped version
